[package]
name = "illusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = {version = "0.26.0", features = ["global_allocator", "alloc"] } # https://crates.io/crates/uefi
log = { version = "0.4.20", default-features = false } # https://crates.io/crates/log
com_logger = "0.1.1" # https://crates.io/crates/com_logger

hypervisor = { path = "../hypervisor" }