[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
x86 = "0.52.0" # https://crates.io/crates/x86
clap = { version = "4.5.4", features = ["derive"] } # https://crates.io/crates/clap
ntapi = { version = "0.4.0", default-features = false } # https://crates.io/crates/ntapi
winapi = { version = "0.3.9", default-features = false, features = ["processthreadsapi", "memoryapi", "winbase", "impl-default", "errhandlingapi", "handleapi", "winuser", "heapapi", "libloaderapi", "winnt"] } # https://crates.io/crates/winapi
obfstr = "0.4.3" # https://crates.io/crates/obfstr
core_affinity = "0.8.1"
raw-cpuid = "11.0"
shared = { path = "../shared" }
thiserror = "1.0.63"

[dependencies.windows-sys]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_LibraryLoader",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_SystemInformation",
    "Win32_System_Environment",
    "Win32_System_ProcessStatus",
    "Win32_Globalization",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
]