[package]
name = "hypervisor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vmware = []

[lib]
name = "hypervisor"
path = "src/lib.rs"

[dependencies]
x86 = "0.52.0" # https://crates.io/crates/x86
x86_64 = "0.15.0" # https://crates.io/crates/x86_64
thiserror-no-std = "2.0.2" # https://crates.io/crates/thiserror-no-std
bitfield = "0.15.0" # https://crates.io/crates/bitfield
bit_field = "0.10.2" # https://crates.io/crates/bit_field
bitflags = "2.4.1" # https://crates.io/crates/bitflags
elain = "0.3.0" # https://crates.io/crates/elain
lazy_static = { version = "1.4.0", features = ["spin_no_std"] } # https://crates.io/crates/lazy_static
obfstr = "0.4.3" # https://crates.io/crates/obfstr/
static_assertions = "1.1.0" # https://crates.io/crates/static_assertions
log = "0.4.20" # https://crates.io/crates/log
bstr = { version = "1.9.0", default-features = false } # https://crates.io/crates/bstr
derivative = { version = "2.2.0", features = ["use_core"]} # https://crates.io/crates/derivative
spin = "0.9" # https://crates.io/crates/spin
lde = "0.3.0" # https://crates.io/crates/lde
num-traits = { version = "0.2.19", default-features = false } # https://crates.io/crates/num-traits
num-derive = { version = "0.4.2", default-features = false } # https://crates.io/crates/num-derive
shared = { path = "../shared" }