[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
x86 = "0.52.0" # https://crates.io/crates/x86
x86_64 = "0.15.0" # https://crates.io/crates/x86_64
log = "0.4.20" # https://crates.io/crates/log
spin = "0.9" # https://crates.io/crates/spin
iced-x86 = { version = "1.20.0", default-features = false, features = ["no_std", "decoder", "nasm", "block_encoder", "instr_info", "no_d3now", "no_evex", "no_vex", "no_xop"] } # https://crates.io/crates/iced-x86

hypervisor = { path = "../hypervisor" }
