[package]
name = "illusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.27.0", features = ["global_allocator", "alloc"] } # https://crates.io/crates/uefi
uefi-services = { version = "0.24.0", default-features = false } # https://crates.io/crates/uefi-services
log = { version = "0.4.20", default-features = false } # https://crates.io/crates/log
once_cell = "1.19.0" # https://crates.io/crates/once_cell
spin = "0.9" # https://crates.io/crates/spin
com_logger = "0.1.1" # https://crates.io/crates/com_logger
hypervisor = { path = "../hypervisor" }