[package]
name = "illusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "illusion"
path = "src/main.rs"

[dependencies]
uefi = { version = "0.30.0", features = ["alloc"] } # https://crates.io/crates/uefi
log = { version = "0.4.20", default-features = false } # https://crates.io/crates/log
once_cell = "1.19.0" # https://crates.io/crates/once_cell
spin = "0.9" # https://crates.io/crates/spin
com_logger = "0.1.1" # https://crates.io/crates/com_logger
hypervisor = { path = "../hypervisor", features = ["vmware"] }